2016-03-07
All possible user input in handled.  Still need a method to print all monsters.

2016-03-07
PC movement is controlled by a human!

2016-03-07
Dungeon printing works with curses.  I need to verify that the disabled printfs are not needed.

2016-03-06
Initial project and created stairs.  They don't work yet though.